--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,14 +1,21 @@
 <header class="container-fluid">
-  <div class="row">
-    <div class="col-md-6">
+  <div class="row align-items-center">
+
+    <div class="col-md-3">
       <h1>Stock Tracker</h1>
     </div>
-    <nav class="nav col-md-6 justify-content-end">
+
+    <div class="col-md-6 justify-content-center">
+      <app-symbol-search></app-symbol-search>
+    </div>
+
+    <nav class="nav col-md-3 justify-content-end align-items-center">
       <p *ngIf="us.isAuthenticated">{{ us.currentUser?.email }}</p>
       <li class="nav-item"><a routerLink="/" class="nav-link">Home</a></li>
       <li class="nav-item" *ngIf="us.isAuthenticated"><a class="nav-link" (click)="us.logout()">Logout</a></li>
       <li class="nav-item" *ngIf="!us.isAuthenticated"><a routerLink="/login" class="nav-link">Login</a></li>
       <li class="nav-item" *ngIf="!us.isAuthenticated"><a routerLink="/login/sign-up" class="nav-link">Sign Up</a></li>
     </nav>
+
   </div>
 </header>
