Added stock detail header; changed data service

--- a/src/app/shared/components/symbol-search/symbol-search.component.html
+++ b/src/app/shared/components/symbol-search/symbol-search.component.html
@@ -10,8 +10,7 @@
     [(ngModel)]='chosenSymbol'
   >
     <ng-template ng-option-tmp let-item="item">
-      {{item.symbol}} <br/>
-      <small>{{item.name}}</small>
+      {{item.symbol}} <small>{{item.name}}</small>
     </ng-template>
   </ng-select>
 </div>
