--- a/src/app/stock/pages/stock-detail/stock-detail.component.html
+++ b/src/app/stock/pages/stock-detail/stock-detail.component.html
@@ -1,4 +1,7 @@
-<div *ngIf="detail">
-  <h2>{{ symbol }}</h2>
-  <span>{{ detail?.quoteType?.shortName }}</span>
+<div class="card">
+  <div *ngIf="detail" class="card-body">
+    <app-stock-detail-header
+      [data]="detail"
+    ></app-stock-detail-header>
+  </div>
 </div>
