--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,10 @@
   <div class="row align-items-center">
 
     <div class="col-md-3">
-      <h1>Stock Tracker</h1>
+      <div style="display: flex; flex-direction: column; align-items: center;">
+        <h1>Stock Tracker</h1>
+        <a target="_blank" style="display: block;" href="https://iexcloud.io">Data provided by IEX Cloud</a>
+      </div>
     </div>
 
     <div class="col-md-6 justify-content-center">
