--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,10 @@ html, body {
   background-color: #ededed;
 }
 
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-weight: 700;
+}
+
 @media (min-width: 1200px) {
   .container, .container-lg, .container-md, .container-sm, .container-xl {
       max-width: 1420px;
