Added stock table

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,9 +2,11 @@
   <div class="row align-items-center">
 
     <div class="col-md-3">
-      <div style="display: flex; flex-direction: column; align-items: center;">
-        <h1>Stock Tracker</h1>
-        <a target="_blank" style="display: block;" href="https://iexcloud.io">Data provided by IEX Cloud</a>
+      <div style="display: flex; flex-direction: column; align-items: baseline;">
+        <h1>Stock Assistant</h1>
+        <small>
+          <a target="_blank" style="display: block; padding-left: 1.1em" href="https://iexcloud.io">Data provided by IEX Cloud</a>
+        </small>
       </div>
     </div>
 
