--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,16 @@
 <div class="row">
-  <div class="col-md-6" *ngFor='let symbol of symbols'>
-    <app-candle-chart
-      [symbol]="symbol"
-    ></app-candle-chart>
+  <div class="col-md-9">
+    <div class="row">
+      <div class="col-md-6" *ngFor='let symbol of symbols'>
+        <app-candle-chart
+          [symbol]="symbol"
+        ></app-candle-chart>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-3">
+    <app-recently-viewed></app-recently-viewed>
   </div>
 </div>
+
