--- a/src/app/shared/components/symbol-search/symbol-search.component.html
+++ b/src/app/shared/components/symbol-search/symbol-search.component.html
@@ -1,7 +1,7 @@
 <div class="justify-content-center">
   <!-- <input (keyup)="handleKeyUp($event)" class="form-control" type="text" id="" placeholder="Search symbols..."  /> -->
   <ng-select
-    [items]="symbols"
+    [items]="symbols$ | async"
     bindLabel="symbol"
     bindValue="id"
     (search)="searchSymbol($event)"
