--- a/src/app/stock/pages/stock-detail/stock-detail.component.html
+++ b/src/app/stock/pages/stock-detail/stock-detail.component.html
@@ -16,10 +16,15 @@
 
       <hr />
 
-      <app-candle-chart
+      <app-line-chart
         [symbol]="symbol"
-        interval="10000"
-      ></app-candle-chart>
+        interval="30000"
+      ></app-line-chart>
+
+      <!-- <app-candle-chart
+        [symbol]="symbol"
+        interval="30000"
+      ></app-candle-chart> -->
     </div>
   </div>
 
