--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -2,9 +2,9 @@
   <div class="col-md-9">
     <div class="row">
       <div class="col-md-6" *ngFor='let symbol of symbols'>
-        <app-candle-chart
+        <app-line-chart
           [symbol]="symbol"
-        ></app-candle-chart>
+        ></app-line-chart>
       </div>
     </div>
   </div>
