--- a/src/app/modules/stock/components/stock-detail-header/stock-detail-header.component.html
+++ b/src/app/modules/stock/components/stock-detail-header/stock-detail-header.component.html
@@ -1,14 +1,14 @@
 
 <div class="row justify-align-center" *ngIf="latestData">
   <div class="col-md-6">
-    <h4 class="card-title">{{ data.quoteType?.shortName }} ({{ data.symbol }})
-      <button
-        *ngIf="user.currentUser"
-        style="margin: 0 1em;"
+    <h4 class="card-title">
+      {{ data.quoteType?.shortName }} ({{ data.symbol }})
+      <button *ngIf="user.currentUser" style="margin: 0 0.65em;"
         class="btn btn-primary btn-sm" (click)="addToWishlist()">
-          Add To Watchlist
+        <fa-icon [icon]="icons.eye"></fa-icon>
       </button>
     </h4>
+
     <p><b>Industry:</b> {{ data.summaryProfile.industry }}</p>
     <p><b>Website: </b><a target="_blank" [href]="data.summaryProfile.website">{{ data.summaryProfile.website }}</a></p>
   </div>
