--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,9 +1,10 @@
 <div class="row">
   <div class="col-md-9">
     <div class="row">
-      <div class="col-md-6" *ngFor='let symbol of symbols'>
+      <div class="col-md-6" *ngFor='let dat of lineChartData'>
         <app-line-chart
-          [symbol]="symbol"
+          [symbol]="dat.symbol"
+          [data]="dat.data"
         ></app-line-chart>
       </div>
     </div>
