--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,17 +1,18 @@
-<div class="row">
-  <div class="col-md-9">
+<!-- <div class="row">
+  <div class="col-md-9"> -->
     <div class="row">
-      <div class="col-md-6" *ngFor='let dat of lineChartData'>
+      <div class="col-md-6" *ngFor='let chart of lineChartData'>
         <app-line-chart
-          [symbol]="dat.symbol"
-          [data]="dat.data"
+          [symbol]="chart.symbol"
+          [data]="chart.data"
+          [title]="chart.symbol"
         ></app-line-chart>
       </div>
     </div>
-  </div>
+  <!-- </div>
 
   <div class="col-md-3">
     <app-recently-viewed></app-recently-viewed>
   </div>
-</div>
+</div> -->
 
