--- a/src/app/modules/stock/pages/stock-detail/stock-detail.component.html
+++ b/src/app/modules/stock/pages/stock-detail/stock-detail.component.html
@@ -1,13 +1,13 @@
-<div class="row" style="padding: 0 15px;" >
+<!-- <div class="row" style="padding: 0 15px;" > -->
   <!-- When no data is available -->
-  <div class="card col-md-8" *ngIf="noDataAvailable">
+  <div class="card" *ngIf="noDataAvailable">
     <div class="card-body">
       No data is available for this symbol. Please try another symbol.
     </div>
   </div>
 
   <!-- When data is available -->
-  <div class="card col-md-8" *ngIf="!noDataAvailable">
+  <div class="card" *ngIf="!noDataAvailable">
     <div *ngIf="detail" class="card-body">
       <app-stock-detail-header
         [data]="detail"
@@ -27,15 +27,6 @@
       ></app-candle-chart> -->
     </div>
   </div>
-
-  <div class="card col-md-3 offset-md-1">
-    <div class="card-body">
-      <app-recently-viewed
-        [symbol]="symbol"
-      ></app-recently-viewed>
-    </div>
-  </div>
-</div>
-
+<!-- </div> -->
 
 
